# kfp2g-archive

./: .gitignore  .oxfmtrc.json  README.md  package.json  tsconfig.json
.github/workflows/: main.yml
output/parade/ab/: ab_304.0_Android_1.0.0_chunk_map.json  ab_304.0_Windows_1.0.0_chunk_map.json  ab_304.0_iOS_1.0.0_chunk_map.json  ab_305.0_Android_1.0.0_chunk_map.json  ab_305.0_Windows_1.0.0_chunk_map.json  ab_305.0_iOS_1.0.0_chunk_map.json  ab_305.1_Android_1.0.0_chunk_map.json  ab_305.1_Windows_1.0.0_chunk_map.json  ab_305.1_iOS_1.0.0_chunk_map.json  ab_306.0_Android_1.0.0_chunk_map.json  ab_306.0_Windows_1.0.0_chunk_map.json  ab_306.0_iOS_1.0.0_chunk_map.json  ab_307.0_Android_1.0.0_chunk_map.json  ab_307.0_Windows_1.0.0_chunk_map.json  ab_307.0_iOS_1.0.0_chunk_map.json  ab_308.0_Android_1.0.0_chunk_map.json  ab_308.0_Windows_1.0.0_chunk_map.json  ab_308.0_iOS_1.0.0_chunk_map.json  ab_309.0_Android_1.0.0_chunk_map.json  ab_309.0_Windows_1.0.0_chunk_map.json  ab_309.0_iOS_1.0.0_chunk_map.json  ab_310.0_Android_1.0.0_chunk_map.json  ab_310.0_Windows_1.0.0_chunk_map.json  ab_310.0_iOS_1.0.0_chunk_map.json  ab_311.0_Android_1.0.0_chunk_map.json  ab_311.0_Windows_1.0.0_chunk_map.json  ab_311.0_iOS_1.0.0_chunk_map.json  mirror_list.json
output/parade/dmm_game_files/: mirror_file_list.json
src/: cmd.ts  cmds.ts
src/cmds/: abArchive.ts  abDownload.ts  archive.ts  gamePkgArchive.ts
src/utils/: config.ts  configAuth.ts  configEmbed.ts  exit.ts  file.ts  github.ts  tarball.ts
tools/get-dmm-actauth/: Cargo.toml
tools/get-dmm-actauth/src/: main.rs
(+324 files in other folders)
