[package]
name = "get-dmm-actauth"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-dpapi = "0.2.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hex = "0.4.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
